--- a/src/app/status/business/business-inheritance/business-inheritance.component.html
+++ b/src/app/status/business/business-inheritance/business-inheritance.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.businessInheritance"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">I involved in family run business</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">I involved in family run business</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.businessInheritance"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-2">I started my own business</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">I started my own business</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.businessInheritance"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">I bought this business from others</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">I bought this business from others</label>
       	</div>
  	</div>
 
