--- a/src/app/status/business/business-investment/business-investment.component.html
+++ b/src/app/status/business/business-investment/business-investment.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">0-5 lakhs</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">0-5 lakhs</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-2">5-10 lakhs</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">5-10 lakhs</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">10-20 lakhs</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">10-20 lakhs</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -54,7 +54,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">20-50 lakhs</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">20-50 lakhs</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -67,7 +67,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-5">50-100 lakhs</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">50-100 lakhs</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -80,7 +80,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-6">1-2 Karod</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-6">1-2 Karod</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -93,7 +93,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-7">More than 2 karod</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-7">More than 2 karod</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -105,7 +105,7 @@
       			[(ngModel)]="surveyService.businessInvestment"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-8">Don't want to say</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-8">Don't want to say</label>
       	</div>
  	</div>
 
@@ -115,10 +115,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 	</div>
 </div>
 					
