--- a/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
+++ b/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
@@ -1,4 +1,4 @@
-<p class="lead text-center">Whem do you intend to go back to Nepal permanently ?</p>
+<p class="lead text-center">When do you intend to go back to Nepal permanently ?</p>
 <div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
 	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
@@ -18,7 +18,7 @@
       			#oneYear="ngModel"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">Within a Year</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">Within a Year</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -31,7 +31,7 @@
       			#retail="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-2">2-3</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">2-3</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -44,7 +44,7 @@
       			#service="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">3-5 years</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">3-5 years</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -57,7 +57,7 @@
       			#service="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">5-10 years</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">5-10 years</label>
       	</div>
  	</div>
 
