--- a/src/app/status/foreign-employment/fe-overtime/fe-overtime.component.html
+++ b/src/app/status/foreign-employment/fe-overtime/fe-overtime.component.html
@@ -18,7 +18,7 @@
       			#production="ngModel"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">Yes</label>
+      		<label class="custom-control-label pl-2" for="group-1">Yes</label>
       	</div>
       	
       	<div class="col custom-control custom-radio">
@@ -32,7 +32,7 @@
       			#production="ngModel"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-2">No</label>
+      		<label class="custom-control-label pl-2" for="group-2">No</label>
       	</div>	
  	</div>
 </form>
@@ -41,10 +41,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 	</div>
 </div>
 					
