--- a/src/app/status/housewife/housewife-jobwish/housewife-jobwish.component.html
+++ b/src/app/status/housewife/housewife-jobwish/housewife-jobwish.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.housewifeWish"
       			required
 	      		>
-      		<label class="custom-control-label" for="yes">Yes</label>
+      		<label class="custom-control-label pl-2" for="yes">Yes</label>
       	</div>
       	<div class="col custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.housewifeWish"
       			required
 	      		>
-      		<label class="custom-control-label" for="no">No</label>
+      		<label class="custom-control-label pl-2" for="no">No</label>
       	</div>
 	</div>
 
