--- a/src/app/status/job/job-level/job-level.component.html
+++ b/src/app/status/job/job-level/job-level.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.jobLevel"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">Don't want to say</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">Don't want to say</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.jobLevel"
       			required
 	      		>
-      		<label class="custom-control-label" for="business">Manager</label>
+      		<label class="custom-control-label pl-2 ml-3" for="business">Manager</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.jobLevel"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">Mid level manager</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">Mid level manager</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -53,7 +53,7 @@
       			[(ngModel)]="surveyService.jobLevel"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">+2, Campus teacher</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">+2, Campus teacher</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -65,7 +65,7 @@
       			[(ngModel)]="surveyService.jobLevel"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-5">School teacher</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">School teacher</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -77,7 +77,7 @@
       			[(ngModel)]="surveyService.jobLevel"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-6">Other</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-6">Other</label>
       	</div>
       	
  	</div>
@@ -88,10 +88,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 	</div>
 </div>
 					
