--- a/src/app/status/job/job-organisation/job-organisation.component.html
+++ b/src/app/status/job/job-organisation/job-organisation.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.organisationType"
       			required 
 	      		>
-      		<label class="custom-control-label" for="government">Government</label>
+      		<label class="custom-control-label pl-2 ml-3" for="government">Government</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.organisationType"
       			required
 	      		>
-      		<label class="custom-control-label" for="business">Private</label>
+      		<label class="custom-control-label pl-2 ml-3" for="business">Private</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.organisationType"
       			required
 	      		>
-      		<label class="custom-control-label" for="ngoingo">NGO / INGO</label>
+      		<label class="custom-control-label pl-2 ml-3" for="ngoingo">NGO / INGO</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -53,7 +53,7 @@
       			[(ngModel)]="surveyService.organisationType"
       			required
 	      		>
-      		<label class="custom-control-label" for="co-operative">Co-operative</label>
+      		<label class="custom-control-label pl-2 ml-3" for="co-operative">Co-operative</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -65,7 +65,7 @@
       			[(ngModel)]="surveyService.organisationType"
       			required
 	      		>
-      		<label class="custom-control-label" for="education-institution">Education Institution</label>
+      		<label class="custom-control-label pl-2 ml-3" for="education-institution">Education Institution</label>
       	</div>
       	
  	</div>
@@ -76,10 +76,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 	</div>
 </div>
 					
