--- a/src/app/status/job/job-other-activities/job-other-activities.component.html
+++ b/src/app/status/job/job-other-activities/job-other-activities.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">Social Service</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">Social Service</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label" for="business">I am involved in other social organisation. i.e. club</label>
+      		<label class="custom-control-label pl-2 ml-3" for="business">I am involved in other social organisation. i.e. club</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">Politics</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">Politics</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -53,7 +53,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">Part-time job</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">Part-time job</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -65,7 +65,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-5">I provide support to family business.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">I provide support to family business.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -77,7 +77,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-6">I involve in household activities</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-6">I involve in household activities</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -89,7 +89,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-7">Other hobby i.e. music, singing, dancing</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-7">Other hobby i.e. music, singing, dancing</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -101,7 +101,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-8">Don't want to disclose</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-8">Don't want to disclose</label>
       	</div>
       	
  	</div>
@@ -112,10 +112,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 	</div>
 </div>
 					
