--- a/src/app/status/retired/retired-time/retired-time.component.html
+++ b/src/app/status/retired/retired-time/retired-time.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.retiredTime"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">1-2 years ago</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">1-2 years ago</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.retiredTime"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-2">2-4 years ago</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">2-4 years ago</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.retiredTime"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">4-6 years ago</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">4-6 years ago</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -54,7 +54,7 @@
       			[(ngModel)]="surveyService.retiredTime"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">6-10 years ago</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">6-10 years ago</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -67,7 +67,7 @@
       			[(ngModel)]="surveyService.retiredTime"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-5">More than 10 years ago</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">More than 10 years ago</label>
       	</div>
  	</div>
 
@@ -77,10 +77,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 	</div>
 </div>
 					
