--- a/src/app/status/retired/service-duration/service-duration.component.html
+++ b/src/app/status/retired/service-duration/service-duration.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.serviceDuration"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">10-15 years</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">10-15 years</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.serviceDuration"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-2">15-20 years</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">15-20 years</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.serviceDuration"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">20-25 years</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">20-25 years</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -54,7 +54,7 @@
       			[(ngModel)]="surveyService.serviceDuration"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">More than 25 years</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">More than 25 years</label>
       	</div>
  	</div>
 
@@ -64,10 +64,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 		
 	</div>
 </div>
