--- a/src/app/status/study/after-study/after-study.component.html
+++ b/src/app/status/study/after-study/after-study.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.afterStudy"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">Further study in Nepal</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">Further study in Nepal</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.afterStudy"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-2">Foreign study</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">Foreign study</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.afterStudy"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">Foreign employment</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">Foreign employment</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -54,7 +54,7 @@
       			[(ngModel)]="surveyService.afterStudy"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">Job</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">Job</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -67,7 +67,7 @@
       			[(ngModel)]="surveyService.afterStudy"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-5">Business</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">Business</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -80,7 +80,7 @@
       			[(ngModel)]="surveyService.afterStudy"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-6">Other</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-6">Other</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -92,7 +92,7 @@
       			[(ngModel)]="surveyService.afterStudy"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-7">Not sure / No plan yet</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-7">Not sure / No plan yet</label>
       	</div>
  	</div>
 </form>
@@ -101,10 +101,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 		
 	</div>
 </div>
