--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -1,28 +1,13 @@
-<section id="thank-you" class="mt-3">
-	<div class="container">
-		<div class="row justify-content-md-center">
-			<div class="col-sm-8 col-xs-12">
-				<h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
-				<hr>
-				
-				<div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
-					<div class="card-header text-success text-center c-main-bg-color">
-						<h3 class="text-success">Thank you</h3>
-					</div>
-					<div class="card-body text-center">
-						<!--
-					    <h5 class="card-title">Special title treatment</h5>
-					-->
-					    <p class="card-text">Thank you for your interest and valuable time to participate in this survey. If you want to know more about this survey and Employment Cell of DJMC, please contact us.</p>
-					    <a href="#" class="btn btn-outline-success">Go DJMC website</a>
-				  	</div>
-			  	 	<div class="card-footer text-muted text-center">
-					    <p>John Citizen</p>
-					    <p>Email: johncitizendummy@dubmmyemail.com</p>
-					    <p>mobile: 98XXXXXXXXX</p>
-				  	</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+<div class="card-header text-success text-center c-main-bg-color">
+	<h3 class="text-success">Thank you</h3>
+</div>
+<div class="card-body text-center">
+	<p class="card-text">Thank you for your interest and valuable time to participate in this survey. If you want to know more about this survey and Employment Cell of DJMC, please contact us.</p>
+	<a href="#" class="btn btn-outline-success">Go DJMC website</a>
+</div>
+<div class="card-footer text-muted text-center">
+	<p>John Citizen</p>
+	<p>Email: johncitizendummy@dummyemail.com</p>
+	<p>mobile: 98XXXXXXXXX</p>
+</div>
+			
