--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -18,7 +18,7 @@
       			#level="ngModel"
       			required 
 	      		>
-      		<label class="custom-control-label" for="icom">I.Com.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="icom">I.Com.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -31,7 +31,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="ia">I.A.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="ia">I.A.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -44,7 +44,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="ied">I.Ed.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="ied">I.Ed.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -57,7 +57,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="isc">I.Sc.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="isc">I.Sc.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -70,7 +70,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="bbs">BBS</label>
+      		<label class="custom-control-label pl-2 ml-3" for="bbs">BBS</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -83,7 +83,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="ba">B.A.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="ba">B.A.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -96,7 +96,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="bed">B.Ed.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="bed">B.Ed.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -109,7 +109,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="mbs">MBS</label>
+      		<label class="custom-control-label pl-2 ml-3" for="mbs">MBS</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -122,7 +122,7 @@
       			#level="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="ma">M.A.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="ma">M.A.</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -135,7 +135,7 @@
       			#level="ngModel"
       			required 
 	      		>
-      		<label class="custom-control-label" for="med">M.Ed.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="med">M.Ed.</label>
       	</div>
  	</div>
  	
