--- a/src/app/gender/gender.component.html
+++ b/src/app/gender/gender.component.html
@@ -49,10 +49,10 @@
 
 	<div class="row text-center">
 		<div class="col xs-6">
-			<button class="btn btn-outline-success btn-small" (click)="goBack()">Back</button>
+			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 		</div>
 		<div class="col xs-6">
-			<button type="submit" (click)="onSubmit()"  class="btn btn-outline-success btn-small">Next</button>
+			<button type="submit" (click)="onSubmit()"  class="btn btn-outline-success">Next</button>
 		</div>
 	</div>
 </form>
