--- a/src/app/status/business/business-number/business-number.component.html
+++ b/src/app/status/business/business-number/business-number.component.html
@@ -6,8 +6,8 @@
 	<p>Please select one</p>
 </div>
 <form #f="ngForm">
-	<div class="row mt-4">
-		<div class="col-xs-12 custom-control custom-radio">
+	<div class="row mt-4 text-center">
+		<div class="col custom-control custom-radio">
       		<input 
       			id="group-1" 
       			type="radio" 
@@ -17,9 +17,9 @@
       			[(ngModel)]="surveyService.businessNumber"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">Yes</label>
+      		<label class="custom-control-label pl-2" for="group-1">Yes</label>
       	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+      	<div class="col custom-control custom-radio mt-2">
       		<input 
       			id="group-2" 
       			type="radio" 
@@ -28,7 +28,7 @@
       			value="No"
       			[(ngModel)]="surveyService.businessNumber"
 	      		>
-      		<label class="custom-control-label" for="group-2">No</label>
+      		<label class="custom-control-label pl-2" for="group-2">No</label>
       	</div>
  	</div>
 
@@ -38,10 +38,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 		
 	</div>
 </div>
