--- a/src/app/status/business/employee-number/employee-number.component.html
+++ b/src/app/status/business/employee-number/employee-number.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.employeeNumber"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">Myself</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">Myself</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.employeeNumber"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-2">My family</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">My family</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.employeeNumber"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">3-5</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">3-5</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -54,7 +54,7 @@
       			[(ngModel)]="surveyService.employeeNumber"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">5-10</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">5-10</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -67,7 +67,7 @@
       			[(ngModel)]="surveyService.employeeNumber"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-5">10-20</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">10-20</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -80,7 +80,7 @@
       			[(ngModel)]="surveyService.employeeNumber"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-6">20-40</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-6">20-40</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -93,7 +93,7 @@
       			[(ngModel)]="surveyService.employeeNumber"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-7">More than 40</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-7">More than 40</label>
       	</div>
 
  	</div>
@@ -104,10 +104,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 		
 	</div>
 </div>
