--- a/src/app/status/job/future-job-change/future-job-change.component.html
+++ b/src/app/status/job/future-job-change/future-job-change.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.futureJobChange"
       			required
 	      		>
-      		<label class="custom-control-label" for="yes">Yes</label>
+      		<label class="custom-control-label pl-2 ml-3" for="yes">Yes</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.futureJobChange"
       			required
 	      		>
-      		<label class="custom-control-label" for="no">No</label>
+      		<label class="custom-control-label pl-2 ml-3" for="no">No</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.futureJobChange"
       			required
 	      		>
-      		<label class="custom-control-label" for="no">Not sure</label>
+      		<label class="custom-control-label pl-2 ml-3" for="no">Not sure</label>
       	</div>
 	</div>
 
@@ -49,10 +49,10 @@
 
 	<div class="row text-center">
 		<div class="col xs-6">
-			<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+			<button class="btn btn-outline-successl" (click)="goBack()">Back</button>
 		</div>
 		<div class="col xs-6">
-			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 		</div>
 	</div>
 </form>
