--- a/src/app/status/job/job-income/job-income.component.html
+++ b/src/app/status/job/job-income/job-income.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required 
 	      		>
-      		<label class="custom-control-label" for="group-1">10-15 Thousands</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">10-15 Thousands</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label" for="business">15-20 Thousands</label>
+      		<label class="custom-control-label pl-2 ml-3" for="business">15-20 Thousands</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -41,7 +41,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-3">20-25 Thousands</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">20-25 Thousands</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -53,7 +53,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-4">25-35 Thousands</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">25-35 Thousands</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -65,7 +65,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-5">35-50 Thousands</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">35-50 Thousands</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -77,7 +77,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-6">50-100 Thousands</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-6">50-100 Thousands</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -89,7 +89,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-7">100 Thousands above</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-7">100 Thousands above</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -101,7 +101,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label" for="group-8">Don't want to disclose</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-8">Don't want to disclose</label>
       	</div>
       	
  	</div>
