--- a/src/app/status/retired/retired-pension/retired-pension.component.html
+++ b/src/app/status/retired/retired-pension/retired-pension.component.html
@@ -17,7 +17,7 @@
       			[(ngModel)]="surveyService.pension"
       			required
 	      		>
-      		<label class="custom-control-label" for="yes">Yes</label>
+      		<label class="custom-control-label pl-2" for="yes">Yes</label>
       	</div>
       	<div class="col custom-control custom-radio mt-2">
       		<input 
@@ -30,7 +30,7 @@
       			#notCompleted="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label" for="no">No</label>
+      		<label class="custom-control-label pl-2" for="no">No</label>
       	</div>
 	</div>
 
@@ -38,10 +38,10 @@
 
 	<div class="row text-center">
 		<div class="col xs-6">
-			<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 		</div>
 		<div class="col xs-6">
-			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 		</div>
 	</div>
 </form>
